docs/index.css
/*!
 *       __ _____                     ________                              __
 *      / // _  /__ __ _____ ___ __ _/__  ___/__ ___ ______ __ __  __ ___  / /
 *  __ / // // // // // _  // _// // / / // _  // _//     // //  \/ // _ \/ /
 * /  / // // // // // ___// / / // / / // ___// / / / / // // /\  // // / /__
 * \___//____ \\___//____//_/ _\_  / /_//____//_/ /_/ /_//_//_/ /_/ \__\_\___/
 *           \/              /____/                              version 2.39.0
 * http://terminal.jcubic.pl
 *
 * This file is part of jQuery Terminal.
 *
 * Copyright (c) 2011-2023 Jakub T. Jankiewicz <https://jcubic.pl/me>
 * Released under the MIT license
 *
 * Date: Tue, 13 Feb 2024 21:18:13 +0000
 */
 body {
    margin: 10px;
    background-color: #000000;
 }
 
 .terminal .terminal-output .format, .cmd .format,
 .cmd-prompt, .cmd-prompt div {
     display: inline-block;
 }
 .terminal h1, .terminal h2, .terminal h3, .terminal h4, .terminal h5, .terminal h6, .terminal pre, .cmd {
     margin: 0;
 }
 .cmd .cmd-clipboard {
     position: absolute !important;
     left: -16px;
     left: calc(-16px / var(--pixel-density, 1)) !important;
     top: 0 !important;
     width: 16px;
     height: 16px;
     width: calc(16px / var(--pixel-density, 1)) !important;
     height: calc(16px / var(--pixel-density, 1)) !important;
     background: transparent !important;
     border: none !important;
     color: transparent !important;
     outline: none !important;
     padding: 0 !important;
     resize: none !important;
     z-index: 1000 !important;
     overflow: hidden !important;
     white-space: pre !important;
     text-indent: -9999em !important; /* better cursor hiding for Safari and IE */
     top: calc(var(--cursor-line, 0) * var(--size, 1) * (14px / var(--pixel-density, 1))) !important;
 }
 .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     height: 1px;
     overflow: hidden;
     position: absolute;
     white-space: nowrap;
     width: 1px;
     top: 0;
     left: 0;
 }
 .cmd span.cmd-end-line,
 .cmd span.cmd-end-line span,
 .cmd div.cmd-end-line span[data-text]:last-child,
 .cmd div.cmd-end-line span[data-text]:last-child span,
 .cmd textarea,
 .cmd .cursor + span:empty {
     -webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
          -moz-user-select: none; /* Firefox */
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 .terminal img, .terminal audio, .terminal object, .terminal canvas {
     cursor: default;
 }
 .terminal {
     position: relative;
     line-height: initial;
     --base-background: var(--background, #000);
     --base-color: var(--color);
     contain: content;
 }
 .terminal-scroller {
     position: relative;
     overflow-y: auto;
     scrollbar-gutter: stable;
     height: 100%;
     box-sizing: border-box;
 }
 terminal.terminal-temp {
     visibility: hidden;
 }
 body.terminal {
     min-height: 100vh;
     height: 100%;
 }
 html {
     height: 100%;
 }
 body.terminal, body.full-screen-terminal {
     margin: 0;
     height: 100%;
 }
 body.full-screen-terminal .terminal {
     height: 100%;
 }
 .terminal > div.terminal-fill {
     min-height: 100%;
     height: 100%;
 }
 .terminal > .terminal-pixel {
     position: absolute;
     display: inline;
     left: -2px;
     top: -2px;
     width: 1px;
     height: 1px;
 }
 .terminal > .terminal-resizer,
 .terminal > .terminal-font .terminal-resizer {
     position: absolute !important;
     top: 0 !important;
     right: 0 !important;
     bottom: 0 !important;
     left: 0 !important;
     overflow: hidden !important;
     pointer-events: none !important;
     z-index: -1 !important;
     height: 100% !important;
     border: none !important;
     padding: 0 !important;
     width: 100% !important;
 }
 .cmd {
     padding: 0;
     position: relative;
     width: 100%;
     z-index: 300;
 }
 .terminal .cmd, .terminal .cmd div {
     background: transparent !important;
 }
 .terminal a[tabindex="1000"],
 .terminal a[tabindex="1000"]:active,
 .terminal a[tabindex="1000"]:focus {
     outline: none;
 }
 .terminal .inverted, .cmd.cmd.cmd .inverted,
 .terminal .terminal-inverted, .cmd.cmd.cmd .cmd-inverted {
     background-color: #aaa !important;
     color: #000 !important;
 }
 .terminal .terminal-output > :not(.raw) a[href],
 .cmd a[href],
 .terminal.external a[href] {
     color: #3377FF;
     color: var(--link-color, #3377FF);
     cursor: pointer;
 }
 .cmd a[href]:not(.terminal-inverted),
 .terminal .terminal-output > :not(.raw) a[href]:not(.terminal-inverted),
 .terminal.external a[href]:not(.terminal-inverted) {
     --color: var(--link-color, #3377FF);
     /* conditionals: https://www.kizu.ru/conditions-for-css-variables/ */
     /* --glow: 0; */
     text-shadow: 0 0 calc(var(--glow) * 5px) var(--color, #ccc);
 }
 .terminal .terminal-output > :not(.raw) a[href].terminal-inverted,
 .terminal.external a[href].terminal-inverted {
     background: var(--color, #ccc);
     /* conditionals: https://www.kizu.ru/conditions-for-css-variables/ */
     /* --glow: 0; */
     text-shadow: 0 0 calc(var(--glow) * 5px) var(--background, #000);
 }
 .terminal .terminal-output > :not(.raw) a[href]:hover,
 .cmd a[href]:hover,
 .terminal.external a[href]:hover {
     background-color: #3377FF;
     background-color: var(--link-color, #3377FF) !important;
     color: #000;
     color: var(--base-background, #000) !important;
     text-decoration: none;
 }
/* ... */

